--- a/Laboratory.Web/Views/Cart/CartIndex.cshtml
+++ b/Laboratory.Web/Views/Cart/CartIndex.cshtml
@@ -8,7 +8,7 @@
         <div class="card border mt-4 container">
             <div class="card-header bg-dark text-light ml-0 row ">
                 <div class="col-6">
-                    <h3 class="text-success"><i class="bi bi-cart"></i> &nbsp; Shopping Cart</h3>
+                    <h3 class="text-success"><i class="bi bi-cart"></i> &nbsp; Test Cart</h3>
                 </div>
                 <div class="col-6 text-end">
                     <a asp-action="Index" asp-controller="Home" class="btn btn-outline-warning mt-2 btn-sm">Continue Shopping</a>
