--- a/Laboratory.Web/Views/Test/TestCreate.cshtml
+++ b/Laboratory.Web/Views/Test/TestCreate.cshtml
@@ -52,6 +52,9 @@
                 <input type="submit" value="Create" class="btn btn-success form-control" />
 
             </div>
+            <div class="col-6 text-end">
+                <a asp-action="GeneratePdf" asp-controller="Test" class="btn btn-outline-warning mt-2 btn-sm">Download PDF</a>
+            </div>
 
         </div>
 
