--- a/Laboratory.Web/Views/Test/TestIndex.cshtml
+++ b/Laboratory.Web/Views/Test/TestIndex.cshtml
@@ -14,7 +14,12 @@
 			</div>
 			<div class="col-6 text-end">
 				<a asp-action="TestCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Test</a>
-
+			</div>
+			<div class="col-6 text-end">
+				<a asp-action="Lipid"  class="btn btn-outline-warning mt-2 btn-sm">Edit</a>
+			</div>
+			<div class="col-6 text-end">
+				<a asp-action="Report" class="btn btn-outline-warning mt-2 btn-sm">check</a>
 			</div>
 		</div>
 		<table class="table">
