--- a/Laboratory.Web/Views/Shared/_Layout.cshtml
+++ b/Laboratory.Web/Views/Shared/_Layout.cshtml
@@ -31,8 +31,9 @@
                                 Patient Management
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-controller="Patient" asp-action="PatientIndex">Patient</a></li>
+                                <li><a class="dropdown-item" asp-controller="Cart" asp-action="CartEdit">CartEdit</a></li>
                                 <li><a class="dropdown-item" asp-controller="Test" asp-action="TestIndex">Test</a></li>
+                                <li><a class="dropdown-item" asp-controller="TestOrder" asp-action="TestOrderIndex">TestOrderIndex</a></li>
 
                                 <li><hr class="dropdown-divider"></li>
 
