--- a/Laboratory.Web/Views/Cart/CartEdit.cshtml
+++ b/Laboratory.Web/Views/Cart/CartEdit.cshtml
@@ -1,5 +1,10 @@
-﻿@model IEnumerable<TestDto>
+﻿@model CartDto
 
+<input asp-for="CartHeader.UserId" hidden />
+<input asp-for="CartHeader.CartHeaderId" hidden />
+@*     <input asp-for="CartHeader.CouponCode" hidden />
+    <input asp-for="CartHeader.Discount" hidden /> *@
+<input asp-for="CartHeader.CartTotal" hidden />
 <div class="card shadow border-0 mt-4">
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
 		<div class="row">
@@ -19,13 +24,7 @@
 				<a asp-action="Lipid"  class="btn btn-outline-warning mt-2 btn-sm">Edit</a>
 			</div>
 			<div class="col-6 text-end">
-				<a asp-action="OrderUpdate" asp-controller="Cart" class="btn btn-outline-warning mt-2 btn-sm">Cart</a>
-			</div>
-			<div class="col-6 text-end">
 				<a asp-action="Report" class="btn btn-outline-warning mt-2 btn-sm">check</a>
-			</div>
-			<div class="col-6 text-end">
-				<a asp-action="Result" asp-controller="Cart" class="btn btn-outline-warning mt-2 btn-sm">result</a>
 			</div>
 		</div>
 		<table class="table">
@@ -44,13 +43,13 @@
 				</tr>
 			</thead>
 			<tbody>
-				@foreach (var item in Model)
-				{
+				@* @foreach (var item in Model)
+				{ *@
 					<tr>
 						<td>
-							@item.Name
+							Name
 						</td>
-						<td>
+						@* <td>
 							@item.CategoryName
 						</td>
 						<td>
@@ -63,9 +62,9 @@
 							<a class="btn btn-danger" asp-action="TestDelete" asp-route-testId="@item.TestId">
 								<i class="bi bi-trash"></i>
 							</a>
-						</td>
+						</td> *@
 					</tr>
-				}
+			@* 	} *@
 			</tbody>
 		</table>
 
