--- a/Laboratory.Web/Views/Order/OrderDetail.cshtml
+++ b/Laboratory.Web/Views/Order/OrderDetail.cshtml
@@ -1,6 +1,8 @@
-﻿@model OrderHeaderDto
+﻿@model OrderHeaderDto 
+
 @using Laboratory.Web.Utility
-<form method="post">
+<form asp-action="GeneratePdf" method="post">
+@* <form method="post"> *@
     <br />
     <input asp-for="OrderHeaderId" hidden />
     <div class="container">
@@ -87,8 +89,8 @@
                                                 <small class="text-muted">Quantity : @detail.Count</small>
                                             </div>
                                             <div class="col-4 text-end">
-                                               @*  <p class="text-success">@((detail.Count * detail.Price).ToString("c"))</p> *@
-                                                <a asp-action="TestEdit" class="btn btn-success form-control">Edit </a>
+                                                <p class="text-success">@((detail.Count * detail.Price).ToString("c"))</p>
+                                                <a asp-action="Result" asp-controller="Cart" class="btn btn-success form-control">Edit </a>
                                             </div>
                                         </div>
                                     </li>
@@ -104,7 +106,13 @@
                                     </div>
                                 </li>
                             </ul>
+                            <div class="form-group">
+                                <label asp-for="TotalCholesterol" class="control-label"></label>
+                                <input asp-for="TotalCholesterol" class="form-control" />
+                                <span asp-validation-for="TotalCholesterol" class="text-danger"></span>
+                            </div>
 
+                           
                             @if (User.IsInRole(SD.RoleAdmin))
                             {
                                 @if (Model.Status == SD.Status_Approved)
@@ -121,10 +129,12 @@
                                     <button asp-action="CancelOrder" asp-route-orderId="@Model.OrderHeaderId" type="submit" class="btn btn-danger form-control my-1">Cancel Order</button>
                                 }
                             }
+                            
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <button type="submit">Generate PDF</button>
 </form>
