--- a/Laboratory.Web/Views/TestOrder/TestOrderIndex.cshtml
+++ b/Laboratory.Web/Views/TestOrder/TestOrderIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TestDto>
+﻿@model IEnumerable<CartHeaderDto>
 
 <div class="card shadow border-0 mt-4">
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
@@ -16,16 +16,10 @@
 				<a asp-action="TestCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Test</a>
 			</div>
 			<div class="col-6 text-end">
-				<a asp-action="Lipid"  class="btn btn-outline-warning mt-2 btn-sm">Edit</a>
-			</div>
-			<div class="col-6 text-end">
-				<a asp-action="OrderUpdate" asp-controller="Cart" class="btn btn-outline-warning mt-2 btn-sm">Cart</a>
+				<a asp-action="Lipid" class="btn btn-outline-warning mt-2 btn-sm">Edit</a>
 			</div>
 			<div class="col-6 text-end">
 				<a asp-action="Report" class="btn btn-outline-warning mt-2 btn-sm">check</a>
-			</div>
-			<div class="col-6 text-end">
-				<a asp-action="Result" asp-controller="Cart" class="btn btn-outline-warning mt-2 btn-sm">result</a>
 			</div>
 		</div>
 		<table class="table">
@@ -35,10 +29,10 @@
 						Name
 					</th>
 					<th>
-						Category Name
+						Email
 					</th>
 					<th>
-						Price
+						Phone
 					</th>
 					<th></th>
 				</tr>
@@ -51,16 +45,16 @@
 							@item.Name
 						</td>
 						<td>
-							@item.CategoryName
+							@item.Email
 						</td>
 						<td>
-							@((item.Price).ToString("c"))
+							@item.Phone
 						</td>
 						<td>
-							<a class="btn btn-success" asp-action="TestUpdate" asp-route-testId="@item.TestId">
+							<a class="btn btn-success" asp-action="TestUpdate" asp-route-testId="@item.CartHeaderId">
 								<i class="bi bi-pencil-square"></i>
 							</a>
-							<a class="btn btn-danger" asp-action="TestDelete" asp-route-testId="@item.TestId">
+							<a class="btn btn-danger" asp-action="TestDelete" asp-route-testId="@item.CartHeaderId">
 								<i class="bi bi-trash"></i>
 							</a>
 						</td>
