--- a/Laboratory.Web/Views/Order/OrderDetail.cshtml
+++ b/Laboratory.Web/Views/Order/OrderDetail.cshtml
@@ -41,6 +41,21 @@
                                     <input asp-for="Email" readonly class="form-control" />
                                 </div>
                             </div>
+
+                            <div class="row my-1">
+                                <div class="col-3">TotalCholesterol</div>
+                                <div class="col-9">
+                                    <input asp-for="TotalCholesterol" readonly class="form-control" />
+                                </div>
+                            </div>
+
+                             <div class="row my-1">
+                                <div class="col-3">LabNumber</div>
+                                <div class="col-9">
+                                    <input asp-for="LabNumber" readonly class="form-control" />
+                                </div>
+                            </div>
+
                             <div class="row my-1">
                                 <div class="col-3">Order Date</div>
                                 <div class="col-9">
