--- a/Laboratory.Web/Views/Shared/_Layout.cshtml
+++ b/Laboratory.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
                                 <li><a class="dropdown-item" asp-controller="Cart" asp-action="CartEdit">CartEdit</a></li>
                                 <li><a class="dropdown-item" asp-controller="Test" asp-action="TestIndex">Test</a></li>
                                 <li><a class="dropdown-item" asp-controller="TestOrder" asp-action="TestOrderIndex">TestOrderIndex</a></li>
+                                <li><a class="dropdown-item" asp-controller="TestParameter" asp-action="ParameterIndex">ParameterIndex</a></li>
+                                <li><a class="dropdown-item" asp-controller="Parameter" asp-action="ParameterIndex">Parameter</a></li>
 
                                 <li><hr class="dropdown-divider"></li>
 
@@ -43,6 +45,11 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Order" asp-action="OrderIndex">
                                 Manage Order
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Parameter" asp-action="TestResult">
+                                Manage Result
                             </a>
                         </li>
                          <li class="nav-item">
